[gd_scene load_steps=8 format=3 uid="uid://5yy6sv432dpm"]

[ext_resource type="Script" path="res://Scenes/Scripts/Enemy AI/elite_slime.gd" id="1_77e7d"]
[ext_resource type="Texture2D" uid="uid://v1qtbni4id5o" path="res://Sprites/Characters and items/Ultraviolet_6598bd2b-fd20-41d4-93ce-1c7a6d155de4_1024x1024.webp" id="2_bxpvs"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5p6wr"]
radius = 130.0
height = 300.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mg4g6"]
radius = 154.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3gl2h"]
radius = 793.003

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ocvog"]
bg_color = Color(0.0509804, 0.129412, 0.0470588, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yln5s"]
bg_color = Color(0.360784, 0.556863, 0.168627, 1)

[node name="slime" type="CharacterBody2D" groups=["Collision", "Enemy"]]
collision_layer = 5
collision_mask = 3
motion_mode = 1
script = ExtResource("1_77e7d")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(25, 25)
collision_mask = 128

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5p6wr")

[node name="hurttimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="hurtbox" type="Area2D" parent="."]

[node name="collision_shape" type="CollisionShape2D" parent="hurtbox"]
visible = false
shape = SubResource("CircleShape2D_mg4g6")

[node name="Movement_circle" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Movement_circle"]
visible = false
shape = SubResource("CircleShape2D_3gl2h")

[node name="Slime_sprite" type="Sprite2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.294922, 0.304138)
texture = ExtResource("2_bxpvs")
flip_h = true
flip_v = true

[node name="Health_metre" type="ProgressBar" parent="."]
offset_left = -52.0
offset_top = 156.0
offset_right = 52.0
offset_bottom = 164.0
theme_override_styles/background = SubResource("StyleBoxFlat_ocvog")
theme_override_styles/fill = SubResource("StyleBoxFlat_yln5s")
max_value = 60.0
value = 30.0
show_percentage = false
